--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -23,6 +23,7 @@
 // General
 @import 'general/variables';
 @import 'general/base';
+@import 'general/typography';
 
 // Components
 @import 'components/buttons';
