--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <div class="footer fixed-bottom">
   <div class="container">
-    <span class="title">Built with <span style="font-size: 1.2rem">&#x2665;</span> <a href="https://dynatrace.com" target="_blank">by Dynatrace</a></span>
+    <span class="title">Built with &nbsp;<img src="/images/general/icon-heart.svg" alt="Heart">&nbsp; <a class="no-underline" href="https://dynatrace.com" target="_blank">by Dynatrace</a></span>
   </div>
 </div>
