--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -16,5 +16,11 @@
     a {
       color: $textColor;
     }
+
+    img {
+      width: 16px;
+      height: 16px;
+      margin-top: -2px;
+    }
   }
 }
