Finish implementation for home

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,7 +30,7 @@ page-home
 <div class="intro">
   <div class="container pt-5 pb-5">
     <div class="row pt-5 pb-5">
-      <div class="col-7 p-0">
+      <div class="col-7">
         {{ with .Site.GetPage "section" "home/intro" }}
           {{ .Content }}
         {{ end }}
