--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,11 +1,15 @@
 <div class="header fixed-top">
   <div class="container">
     <div class="logo">
-      <a href="/"><img alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/logo.svg" /></a>
+      <a href="/">
+        <img alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/logo.svg" style="width: 100px">
+      </a>
     </div>
 
     <div class="logo-mobile">
-      <a href="/"><img alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/logo-mobile.svg" /></a>
+      <a href="/">
+        <img alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/logo-mobile.svg">
+      </a>
     </div>
 
     {{ partial "main-menu.html" . }}
