--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="logo">
       <a href="/">
-        <img alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/logo.svg" style="width: 100px">
+        <img alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/logo.svg">
       </a>
     </div>
 
