--- a/assets/scss/general/_base.scss
+++ b/assets/scss/general/_base.scss
@@ -3,10 +3,27 @@ html {
 }
 
 body.page {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
   margin-top: 80px;
   margin-bottom: 50px;
   font-family: $font-family-base;
   font-size: 1rem;
+
+  ul,
+  ol {
+    margin: 0;
+    padding: 0;
+  }
+
+  .wrapper {
+    flex: 1;
+  }
+
+  .main {
+    margin-bottom: 0;
+  }
 }
 
 body.page-home,
