--- a/layouts/partials/main-menu.html
+++ b/layouts/partials/main-menu.html
@@ -12,6 +12,6 @@
     {{ end }}
   </ul>
 
-  <a class="button button-primary" href="https://github.com/keptn/keptn.github.io">Quick Start</a>
+  <a class="button button-primary" href="/docs/quickstart/">Quick Start</a>
 </div>
 {{ end }}
