--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -6,6 +6,10 @@
   color: $primary;
   box-shadow: 0 2px 10px 0 rgba($black, 0.1);
 
+  a {
+    font-family: $font-family-base;
+  }
+
   .container {
     display: inherit;
     justify-content: space-between;
