--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -27,6 +27,7 @@
 
 // Components
 @import 'components/buttons';
+@import 'components/contact';
 @import 'components/footer';
 @import 'components/hamburger';
 @import 'components/header';
@@ -37,6 +38,7 @@
 @import 'components/section-index';
 @import 'components/sections';
 @import 'components/sidebar';
+@import 'components/teaser';
 @import 'components/toc';
 
 // Pages
