--- a/layouts/index.html
+++ b/layouts/index.html
@@ -245,75 +245,10 @@ page-home
 </div>
 
 {{/* Teaser */}}
-<div class="teaser section-primary">
-  <div class="container pt-5 pb-5">
-    <div class="row pt-4 pb-4">
-      <div class="col-12 d-flex flex-column text-center">
-        {{ with .Site.GetPage "section" "home/teaser" }}
-          {{ .Content }}
-        {{ end }}
-
-        <div class="d-flex justify-content-center pt-4">
-          <a class="button button-secondary" href="/docs/quickstart/">Quick Start</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+{{ partial "teaser.html" . }}
 
 {{/* Contact */}}
-<div class="contact section-primary-opacity">
-  <a href="#top">
-    <img class="back-to-top" src="/images/general/icon-back-to-top.svg" alt="Back to top">
-  </a>
-
-  <div class="container pt-4 pb-4">
-    <div class="row pt-2 pb-3">
-      <div class="col-12 pt-3">
-        {{ with .Site.GetPage "section" "home/contact-top" }}
-          {{ .Content }}
-        {{ end }}
-      </div>
-
-      <div class="col-12 d-flex flex-row">
-        <div class="col-6 p-0">
-          {{ with .Site.GetPage "section" "home/contact-left" }}
-            {{ .Content }}
-          {{ end }}
-        </div>
-
-        <div class="col-5 offset-1 p-0">
-          {{ with .Site.GetPage "section" "home/contact-right" }}
-            {{ .Content }}
-          {{ end }}
-        </div>
-      </div>
-
-      <div class="col-12 d-flex flex-row pt-4 pb-4">
-        <div class="col-6 p-0">
-          <a class="no-underline" href="https://join.slack.com/t/keptn/shared_invite/enQtNTUxMTQ1MzgzMzUxLWMzNmM1NDc4MmE0MmQ0MDgwYzMzMDc4NjM5ODk0ZmFjNTE2YzlkMGE4NGU5MWUxODY1NTBjNjNmNmI1NWQ1NGY" target="_blank">
-            <img class="icon" src="/images/general/icon-slack.svg" alt="Slack">
-          </a>
-
-          <a class="no-underline" href="https://twitter.com/keptnproject" target="_blank">
-            <img class="icon" src="/images/general/icon-twitter.svg" alt="Twitter">
-          </a>
-
-          <a class="no-underline" href="mailto:keptn@dynatrace.com">
-            <img class="icon" src="/images/general/icon-mail.svg" alt="Mail">
-          </a>
-        </div>
-
-        <div class="col-5 offset-1 p-0">
-          <img class="icon" src="/images/general/icon-calendar.svg" alt="Mail">
-          <a href="https://calendar.google.com/calendar/embed?src=dynatrace.com_abjrh1ukf18ih477tb1ekag2ag%40group.calendar.google.com" target="_blank">Public Google Calendar</a>,
-          <a href="https://calendar.google.com/calendar/ical/dynatrace.com_abjrh1ukf18ih477tb1ekag2ag%40group.calendar.google.com/public/basic.ics" target="_blank">iCal</a>
-          </a>          
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+{{ partial "contact.html" . }}
 {{ end }}
 
 {{ define "footer_js" }}
