--- a/assets/scss/general/_typography.scss
+++ b/assets/scss/general/_typography.scss
@@ -1,29 +1,41 @@
 body.page-home,
 body.page-why-keptn {
   h1 {
-    font-size: 2.8rem;
+    font-size: 2.24rem;
     line-height: 1.4;
+
+    @media screen and (min-width: $bp-md) {
+      font-size: 2.8rem;
+    }
   }
 
   h2 {
     margin-top: 0;
     margin-bottom: 16px;
-    font-size: 2.3rem;
+    font-size: 1.84em;
     line-height: 1.4;
     font-weight: $font-weight-semibold;
 
     &:before {
       display: none;
     }
+
+    @media screen and (min-width: $bp-md) {
+      font-size: 2.3rem;
+    }
   }
 
   p {
     margin-top: 0;
     margin-bottom: 16px;
-    font-size: 1.35rem;
+    font-size: 1em;
 
     strong {
       font-weight: $font-weight-semibold;
+    }
+
+    @media screen and (min-width: $bp-md) {
+      font-size: 1.35rem;
     }
   }
 
