--- a/assets/scss/general/_variables.scss
+++ b/assets/scss/general/_variables.scss
@@ -29,6 +29,7 @@ $link-hover-decoration: underline;
 
 // Fonts
 $font-family-base: 'Open Sans', Arial, sans-serif, -apple-system;
+$font-family-intro: 'Playfair Display', 'Open Sans', Arial, sans-serif, -apple-system;
 $font-family-heading: $font-family-base;
 $font-weight-thin: 200;
 $font-weight-light: 300;
