--- a/assets/scss/components/_contact.scss
+++ b/assets/scss/components/_contact.scss
@@ -2,13 +2,17 @@
   position: relative;
 
   p {
-    font-size: 1.125rem !important;
+    font-size: 1em;
+
+    @media screen and (min-width: $bp-md) {
+      font-size: 1.125rem !important;
+    }
   }
 
   .back-to-top {
     position: absolute;
     top: -32px;
-    right: 112px;
+    right: 6%;
     width: 72px;
     height: 72px;
   }
