--- a/layouts/index.html
+++ b/layouts/index.html
@@ -229,7 +229,7 @@ page-home
         </div>
       </div>
 
-      <div class="col-12 col-md-5">
+      <div class="col-12 col-md-5 pb-4 pb-md-0">
         {{ with .Site.GetPage "section" "home/automatic-remediation-left" }}
           {{ .Content }}
         {{ end }}
